# nix-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: coverage.yml
src/: errors.rs  lib.rs  main.rs  parse.rs  read.rs  unit_test.rs  write.rs
src/tests/: configuration.nix  format.nix  format2.nix  format3.nix  mod.rs  testcases.rs  tests.rs
test_data/write/attrs/: empty_attrs.expect  existing_attrs.expect  existing_attrs.nix  nested_attrs.args  nested_attrs.expect
test_data/write/func/: empty_func.expect  empty_func.nix
test_data/write/let_in/: let.args  let.expect  let.nix
