[package]
name = "nix-editor"
version = "0.2.12"
edition = "2021"
license = "MIT"
description = "Some functions to modify NixOS configuration files"
repository = "https://github.com/vlinkz/nix-editor/"
readme = "README.md"
include = [
  "src/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[dependencies]
clap =  { version = "3.2", features = ["derive"] }
rnix = "0.10"
owo-colors = "3.4"
failure = { version = "0.1", features = ["derive"] }